package com.smartcity.mobility.model;

/**
 * Estados posibles de un vehículo en el subsistema de movilidad urbana.
 * 
 * @author Sebastian Rodrigo ARCE BRACAMONTE (Integrante 1)
 */
public enum VehicleStatus {
    AVAILABLE,
    RENTED,
    CHARGING,
    MAINTENANCE
}
